# OwnerMate

./: .env.example  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  CODING_RULES.md  DATABASE_SCHEMA.md  DATABSE_SCHEMA.md  DEPLOYMENT.md  DOCKER.md  FRONTEND_HANDOFF.md  FRONTEND_INTEGRATION_HANDOFF.md  MD_FILE_PLACEMENT.md  OwnerMate_Final.docx  OwnerMate_Final_Phase2.docx  PRODUCTION_ROLLOUT_RUNBOOK.md  Proposed-Data_Science_Graduation_Project(1)(2)_Student_Handbook-V4.docx  README.md  WORK_LOG.md  docker-compose.yml  final-ownermate-ai-prototype (20).ipynb  pyproject.toml
AI-system/: .gitignore  API.md  CODING_RULES.md  README.md  WORK_LOG.md
Agent prototype/: .env.example  DOCUMENTATION.md  Dockerfile  api_service.py  app.py  localization.py  pipeline.py  requirements.txt  run-prototype.ps1
Sentiment analysis model/: docker-compose.yml
app/: page.tsx
backend/: .env.example  .env.supabase.example  .gitignore  AGENTS.md  BACKEND_HANDOFF.md  DEPLOYMENT.md  Dockerfile  PRODUCTION_BLOCKERS_PLAN.md  SUPABASE_DATA_CUTOVER_PLAN.md  TASKS.md  docker-compose.smoke.yml  docker-compose.supabase.yml  final-ownermate-ai-prototype.ipynb  requirements.txt
docs/: AGENTS.md  ARCHITECTURE.md  DOCKER.md  PRD.md  TASKS.md  TECH_STACK.md  WORK_LOG.md
frontend/: .dockerignore  .env.example  .gitignore  AGENTS.md  FRONTEND_HANDOFF.md  MD_FILE_PLACEMENT.md  PRD.md  README.md  WORKLOG.md  WORK_LOG.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
google-maps-api/: Dockerfile  README.md  docker-compose.yml  requirements.txt
(+356 files in other folders)
